@@ -1,6 +1,12 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
+
+EAPI="3"
+
+PYTHON_DEPEND="2"
+SUPPORT_PYTHON_ABIS="1"
+RESTRICT_PYTHON_ABIS="3.*"
 
 inherit distutils
 
@@ -12,19 +18,3 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 LICENSE="MIT"
 IUSE=""
-
-RDEPEND=""
-DEPEND="${RDEPEND}"
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-}
-
-src_install() {
-	distutils_src_install
-}
-
-pkg_postinst() {
-	python_mod_optimize pywhois
-}
